[gd_scene load_steps=3 format=3 uid="uid://c7k8v5w2l3nan"]

[ext_resource type="Script"    path="res://menus/MainMenu.gd"            id=1]
[ext_resource type="Script"    path="res://menus/widgets/UIButton.gd"    id=2]
[ext_resource type="Texture2D" path="res://assets/images/title_logo.png" id=3]

[node name="MainMenu" type="Control"]
layout_mode     = 3
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2
script          = ExtResource(1)

[node name="Background" type="ColorRect" parent="."]
layout_mode     = 1
anchors_preset  = 15
anchor_right    = 1.0
anchor_bottom   = 1.0
grow_horizontal = 2
grow_vertical   = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode     = 1
anchors_preset  = 8
anchor_left     = 0.5
anchor_top      = 0.5
anchor_right    = 0.5
anchor_bottom   = 0.5
offset_left     = -250.0
offset_top      = -400.0
offset_right    = 250.0
offset_bottom   = 400.0
grow_horizontal = 2
grow_vertical   = 2
alignment       = 1

[node name="TitleImage" type="TextureRect" parent="VBoxContainer"]
custom_minimum_size   = Vector2(500, 500)
layout_mode           = 2
size_flags_horizontal = 4
size_flags_vertical   = 4
expand_mode           = 1
stretch_mode          = 4
texture               = ExtResource(3)

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment   = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="BonusLifeButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="FreeModeButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="RankingButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)

[node name="QuitButton" type="TextureButton" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode         = 2
script              = ExtResource(2)
